--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/DatePickerLocalTZ.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/DatePickerLocalTZ.cshtml
@@ -61,6 +61,7 @@
             });
         </script>
     }
+    htmlAttributes.Add("autocomplete", "off");
 }
 <input type="text" style="display: none;" />
 <div id="@controlId" class="input-append date dateie">
