--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/DatePicker.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/DatePicker.cshtml
@@ -69,6 +69,7 @@
             });
         </script>
     }
+    htmlAttributes.Add("autocomplete","off");
 }
 <input type="text" style="display: none;" />
 <div id="@controlId" class="input-append date dateie">
