--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -1,14 +1,14 @@
 <ng-container [formGroup]="form">
   
   <!-- /Exnterl Log fields --> 
-  <div class="bordered">
-    <case-textarea-control *ngIf="isExternalLogFieldVisible" 
+  <div class="bordered" *ngIf="isExternalLogFieldVisible">
+    <case-textarea-control 
         [field]="caseFieldsNames.Log_ExternalText" 
         [form]="form"></case-textarea-control>
   </div>
 
-  <div class="bordered switch">
-    <mbsc-switch #sendMailToNotifierControl *ngIf="isExternalLogFieldVisible" 
+  <div class="bordered switch" *ngIf="isExternalLogFieldVisible">
+    <mbsc-switch #sendMailToNotifierControl 
                  [disabled]="isSendMailToNotifierDisabled"
                  [formControlName]="caseFieldsNames.Log_SendMailToNotifier"
                  (change)="onSendExternalEmailsCheckChanged()"
@@ -18,30 +18,22 @@
     </mbsc-switch>
   </div>
   
-  <div class="bordered">
-    <lognote-email-input *ngIf="isExternalLogFieldVisible"
-        [field]="caseFieldsNames.Log_ExternalEmailsCC"
-        [form]="form"></lognote-email-input>  
+  <div class="bordered" *ngIf="isExternalLogFieldVisible">
+    <lognote-email-input [field]="caseFieldsNames.Log_ExternalEmailsCC" [form]="form"></lognote-email-input>  
   </div>
   <!-- /Exnterl Log fields --> 
 
   <!-- Internal Log fields -->
-  <div class="bordered">
-    <case-textarea-control *ngIf="isInternalLogFieldVisible"
-        [field]="caseFieldsNames.Log_InternalText" 
-        [form]="form"></case-textarea-control>
+  <div class="bordered" *ngIf="isInternalLogFieldVisible">
+    <case-textarea-control [field]="caseFieldsNames.Log_InternalText" [form]="form"></case-textarea-control>
   </div>
 
-  <div class="bordered">
-    <lognote-email-input *ngIf="isInternalLogFieldVisible"
-        [field]="caseFieldsNames.Log_InternalEmailsTo"
-        [form]="form"></lognote-email-input>
+  <div class="bordered" *ngIf="isInternalLogFieldVisible">
+    <lognote-email-input [field]="caseFieldsNames.Log_InternalEmailsTo" [form]="form"></lognote-email-input>
   </div>
 
-  <div class="bordered">
-    <lognote-email-input *ngIf="isInternalLogFieldVisible"
-        [field]="caseFieldsNames.Log_InternalEmailsCC"
-        [form]="form"></lognote-email-input>
+  <div class="bordered" *ngIf="isInternalLogFieldVisible">
+    <lognote-email-input [field]="caseFieldsNames.Log_InternalEmailsCC" [form]="form"></lognote-email-input>
   </div>
   <!-- /Internal Log fields -->
 
