--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/_Layout.cshtml
@@ -26,6 +26,17 @@
 
         @Scripts.Render("~/Content/js/Shared/_layout")
 
+        <script>
+            window.addEventListener('touchstart', function onFirstTouch() {
+                console.log('Has touchscreen');
+                const bodyEl = document.getElementById('body');
+                bodyEl.classList.remove('desktop');
+                bodyEl.classList.add('touchscreen');
+                window.TouchScreen = true;
+                window.removeEventListener('touchstart', onFirstTouch, false);
+            }, false);
+        </script>
+
         <!--[if lt IE 9]>
          <script src="@Url.Content("~/Content/js/html5shiv.js")"></script>
           <script src="@Url.Content("~/Content/js/respond.min.js")"></script>
@@ -49,9 +60,9 @@
             @Html.Partial("_MainMenu", layoutModel)
         </div>
     </div>
-
-    @RenderBody()
-
+    <div id="body" class="desktop">
+        @RenderBody()
+    </div>
     <div class="container-fluid dh-container">
         <div class="row">
             @* A workaround to hide footer at Message/Index *@
